--- a/client/src/Header.css
+++ b/client/src/Header.css
@@ -5,11 +5,13 @@
     margin: 0 auto;
     /* border: 1px solid red; */
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100%;
 }
 
-.Header h1 {
+.Header h1,
+h5 {
     font-weight: 100;
 }
